syntax = "proto3";
option csharp_namespace = "Shared.Protos";

service ProductService {
  rpc GetProductDetail (GetProductDetailRequest) returns (ProductDetailResponse);

  rpc UpdateProduct (UpdateProductRequest) returns (ProductDetailResponse);

  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}


message GetProductDetailRequest {
  int32 product_id = 1;
}

message UpdateProductRequest {
  Product product = 1;
  Seller seller = 2;
  repeated WarehouseStock warehouse_stocks = 3;
  repeated Country available_countries = 4;
}

message ListProductsRequest {}

message ListProductsResponse {
  repeated Product products = 1;
}

message ProductDetailResponse {
  Product product = 1;
  Seller seller = 2;
  repeated WarehouseStock warehouse_stocks = 3;
  repeated Country available_countries = 4;
}

message Product {
  int32 id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
}

message Seller {
  int32 id = 1;
  string name = 2;
  string contact_email = 3;
}

message WarehouseStock {
  Warehouse warehouse = 1;
  int32 quantity = 2;
}

message Warehouse {
  int32 id = 1;
  string address = 2;
}

message Country {
  int32 id = 1;
  string name = 2;
  string code = 3; // ISO-код страны, например "US", "RU"
}
